fixed door image and alignment and added numbers to progress bar

--- a/client/src/components/Canvas/Map.scss
+++ b/client/src/components/Canvas/Map.scss
@@ -9,15 +9,26 @@ main.map {
   justify-items: center;
   background-image: url('../../images/windows-xp-wallpaper-pixel-art.jpg');
   background-size: cover;
+  
 
     div.RSPBprogressBar {
 
       width: 80%;
       margin: 1em;
+      background-color: #474e5d;
+      align-self: center;
     }
 
     .title {
-      align-items: center;
+
+      h1 {
+
+      }
+
+      .door-slider-dots {
+        display: flex;
+        justify-content: center;
+      }
     }
 
     .container-of-doors {
@@ -36,29 +47,38 @@ main.map {
         flex-shrink: 0;
         height: 100%;
         scroll-snap-align: start;
+
+        .door-arrow {
+          align-self: center;
+          justify-self: center;
+          height: 150px;
+        }
         
         .card {
           width: 100%;
+          display: flex;
+          flex-direction: column;
           background-color: grey;
           border-radius: 18px;
           border: 10px outset #999;
           text-align: center;
           box-shadow: 0 4px 4px #999;
 
-          img {
-            justify-self: center;
-            align-self: center;
+          .door-image {
+            height: 150px;
+            width: 300px;
+            // 
+          }
+          .door-title {
+            // align-self: center;
           }
         }
-        .door-title {
-          // align-self: center;
-        }
     
-        img {
-          // width: 100%;
-          height: 100px;
-          // object-fit: cover;
-        }
-    }
+        // img {
+        //   // width: 100%;
+        //   // height: 150px;
+        //   // object-fit: cover;
+        // }
+      }
   }
 }
